--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "expo-system-ui": "~5.0.9",
     "expo-web-browser": "~14.2.0",
     "firebase": "^11.9.0",
+    "firebase-admin": "^13.6.0",
+    "firebase-functions": "^7.0.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
