Migrar credencialas a variables de entorno

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,14 @@ pnpm-debug.log*
 .pnpm-store/
 
 # ========================================
+# Environment Variables
+# ========================================
+.env
+.env.local
+.env.production
+.env.*.local
+
+# ========================================
 # Expo
 # ========================================
 .expo/
