--- a/eas.json
+++ b/eas.json
@@ -1,23 +1,29 @@
 {
-  "cli": {
-    "version": ">= 16.11.0",
-    "appVersionSource": "remote"
-  },
-  "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal"
-    },
-    "preview": {
-      "android": {
-        "buildType": "apk"
+   "cli": {
+      "version": ">= 16.11.0",
+      "appVersionSource": "remote"
+   },
+   "build": {
+      "development": {
+         "developmentClient": true,
+         "distribution": "internal",
+         "env": {
+            "EXPO_PUBLIC_FIREBASE_API_KEY": "$EXPO_PUBLIC_FIREBASE_API_KEY"
+         }
+      },
+      "preview": {
+         "android": {
+            "buildType": "apk"
+         },
+         "env": {
+            "EXPO_PUBLIC_FIREBASE_API_KEY": "$EXPO_PUBLIC_FIREBASE_API_KEY"
+         }
+      },
+      "production": {
+         "autoIncrement": true,
+         "env": {
+            "EXPO_PUBLIC_FIREBASE_API_KEY": "$EXPO_PUBLIC_FIREBASE_API_KEY"
+         }
       }
-    },
-    "production": {
-      "autoIncrement": true
-    }
-  },
-  "submit": {
-    "production": {}
-  }
+   }
 }
