--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "expo-constants": "~17.1.8",
     "expo-contacts": "^14.2.5",
     "expo-dev-client": "~5.2.1",
+    "expo-device": "~7.1.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.0",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.5",
+    "expo-notifications": "~0.31.4",
     "expo-router": "~5.1.0",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
