--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.0",
     "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.1.0",
     "expo-splash-screen": "~0.30.9",
@@ -39,6 +40,7 @@
     "firebase": "^11.9.0",
     "firebase-admin": "^13.6.0",
     "firebase-functions": "^7.0.3",
+    "getenv": "^2.0.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
